--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.42.1",
+    "stripe": "^8.177.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
