--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.2.9",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
