--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react": "^17.0.2",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
+    "react-epic-spinners": "^0.5.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.42.1",
+    "socket.io-client": "^4.2.0",
     "stripe": "^8.177.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2",
